--- a/painel/css/style.css
+++ b/painel/css/style.css
@@ -509,6 +509,9 @@ table tr td{
 	padding: 1rem;
 	border-collapse: collapse;
 }
+table tr:last-child td{
+	border-bottom: 0px !important;
+}
 table tr.tHead td{
 	font-weight: 500;
 	text-transform: uppercase;
