Update in style

--- a/painel/css/style.css
+++ b/painel/css/style.css
@@ -248,6 +248,9 @@ ul{
 svg{
 	vertical-align: middle;
 }
+.showMenu{
+	display: none !important;
+}
 .card{
 	background-color: var(--bgTwo);
     box-shadow: 0 3px 9px 0 rgb(28 28 51 / 15%);
